<resources>
    <string name="app_name">Own Distributor</string>
    <string name="accept_permission">Please accept the permission to start the application</string>
    <string name="facebook_app_id" translatable="false">257843415722498</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb257843415722498</string>
    <string name="action_settings">Settings</string>
    <string name="phone_required">Phone is Required.</string>
    <string name="phone_code_required">Phone code is required.</string>
    <string name="no_activity_found_to_handle_this_file">No application found to handle this file</string>
    <string name="toast_permission_download_storage">Authorize the storage permission</string>
    <string name="error_occurred">An error occurred </string>
    <string name="cancel">Cancel</string>
    <string name="notification_default_ring_tone" translatable="false">content://settings/system/notification_sound</string>
    <string name="default_notification_channel_id" translatable="false">0</string>
    <string name="you_need_internet_connection">You need an internet connection</string>
    <string name="try_again">Please try again</string>
    <string name="app_title" translatable="false">Mohafiz dz Own Distributor</string>
    <string name="phone_number">Phone</string>
    <string name="reset_code_sent">Reset password code sent to your email</string>
    <string name="error_confirming_phone_code">An error while confirming phone code</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="an_authentication_code_has_sent_to">An authentication code has sent to</string>
    <string name="image_saved">Image is saved</string>
    <string name="upload_title">Upload :</string>
    <string name="uploading_attachments">Uploading attachment</string>
    <string name="preparing_data">Preparing data</string>
    <string name="sync_failed">Sync failed something went wrong</string>
    <string name="fetching_data">Fetching data</string>
    <string name="enter_valid_code">Please enter a valid code</string>
    <string name="phone_verification_successful">Phone verification completed successfully</string>
    <string name="log_out">Log out</string>
    <string name="language_changed">Language has been changed</string>
    <string name="theme_changed">Theme has been changed</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="link_with_phone_title">Link your account with a phone number</string>
    <string name="logout_message">Are you sure you want to log out</string>
    <string name="result_empty">Result empty</string>
    <string name="try_searching_for_something">Try searching for something else</string>
    <string name="incorrect_date">Possible incorrect date</string>
    <string name="incorrect_date_msg"><![CDATA[\"Make sure you\'re online and that the automatic date & time is activated in your phone settings \"]]></string>
    <string name="day"> day </string>
    <string name="days"> days </string>
    <string name="hour"> hour </string>
    <string name="hours"> hours </string>
    <string name="minute"> minute </string>
    <string name="minutes"> minutes </string>
    <string name="seconds"> seconds</string>
    <string name="week">" w"</string>
    <string name="weeks">" w"</string>
    <string name="month">" Mo"</string>
    <string name="months">" Mo"</string>
    <string name="years">" y"</string>
    <string name="year">" y"</string>
    <string name="now">Now</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="loading_dialog_text">Loading ...</string>
    <string name="next">Next</string>
    <string name="phone_authentication">Phone Authentication</string>
    <string name="i_don_t_recieve_code">I don\'t recieve code </string>
    <string name="resend_code">Resend Code</string>
    <string name="fill_your_informations_in_order_to_continue">Fill your informations in order to continue</string>
    <string name="low_storage_error_message">The application won\'t work properly because of the insufficient storage space</string>
    <string name="default_web_client_id" translatable="false">842393264925-9plq81dsb79v6srhjdpkj25gomgkvb9t.apps.googleusercontent.com</string>
    <string name="language">Language</string>
    <string name="app_syncing_try_again_text">The application is syncing the data please try again in a few seconds</string>
    <string name="app_syncing_try_again_title">Modification is temporarily blocked</string>
    <string name="low_version_title">Version is low</string>
    <string name="low_version_message">You need to update the application inorder to continue</string>
    <string name="update">Update</string>
    <string name="terms_of_use_text">By clicking "Continue" I agree that i have read and accepted the @Terms of Use</string>
    <string name="terms_of_use_file_name">terms_of_use_en.txt</string>
    <string name="code_sent">The code has been sent</string>
    <string name="please_wait_for_code">Please Wait for the code</string>
    <string name="scan_qr_code_failed_msg">Failed to scan QR Code</string>
    <string name="login_required_msg">You should login inorder to use this operation</string>
    <string name="log_in">LOG IN</string>
    <string name="dialog_ok">OK</string>
    <string name="error_auth_email">An error while authenticate with email</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="login_details_txt">Don\\\'t have an account? @Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_details_txt">Do you have an account? @Log in</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is Required.</string>
    <string name="password_short_txt">Password is short</string>
    <string name="passwords_differents_txt">Password aren\'t the same</string>
    <string name="navigation_drawer_open">Open drawer menu\n</string>
    <string name="navigation_drawer_close">Close drawer menu</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email|Password</string>
    <string name="skip_label">Skip</string>
    <string name="english_label" translatable="false">English</string>
    <string name="french_label" translatable="false">Français</string>
    <string name="arabic_label" translatable="false">العربية</string>
    <string name="visible_label">Visible</string>
    <string name="or_label">Or</string>
    <string name="welcome_log_in_msg">Please log in to your account</string>
    <string name="welcome_sign_up_msg">Please sign up your new account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="welcome_label">Welcome</string>
    <string name="account_details">Account details</string>
    <string name="full_name">Full name</string>
    <string name="vehicle_label">Vehicle</string>
    <string name="default_vehicle_label">Default vehicle</string>
    <string name="error_restart_app_txt">SomeThing went wrong please restart the application</string>
    <string name="name_required">Name is required</string>
    <string name="vehicle_required">Vehicle is required</string>
    <string name="scan_code_wrong_msg">You should scan a valid code</string>
    <string name="company_name_label">Company name</string>
    <string name="scan_company_required_msg">You should scan company inorder to continue</string>
    <string name="contact_admin_title">Contact admin</string>
    <string name="account_not_configured_msg">Account isn\'t configured yet \nPlease contact your admin</string>
    <string name="planners_not_configured_msg">Planners aren\'t configured yet \nPlease contact your admin</string>
    <string name="call_label">Call</string>
    <string name="create_account_label">Create Account</string>
    <string name="permission_denied_msg">Permission denied</string>
    <string name="catalog_label">Catalog</string>
    <string name="tour_plan_label">Plan your tour</string>
    <string name="plan_label">Plan</string>
    <string name="step_label">Step</string>
    <string name="name_label">Name</string>
    <string name="distributor_label">Distributor</string>
    <string name="region_label">Region</string>
    <string name="validate_label">Validate</string>
    <string name="create_region_label">Create a region</string>
    <string name="name_region_title">Region\'s name</string>
    <string name="save_label">Save</string>
    <string name="ignore_changes_title">Ignore changes</string>
    <string name="ignore_region_changes_msg">The current region isn\'t saved are you sure you want to ignore changes ?</string>
    <string name="ignore_customer_changes_msg">The current customer isn\'t saved are you sure you want to ignore changes ?</string>
    <string name="ignore_expense_changes_msg">The current expense isn\'t saved are you sure you want to ignore changes ?</string>
    <string name="ignore_label">Ignore</string>
    <string name="region_saved_msg">Region save</string>
    <string name="customer_edit_label">Edit customers</string>
    <string name="print_customer_qr_code_label">Customer QR Code print</string>
    <string name="config_label">Configurations</string>
    <string name="force_visit_action_label">Force visit action</string>
    <string name="region_required">Region is required</string>
    <string name="force_current_region_labe">Force current region</string>
    <string name="pending_account_title">Pending Account</string>
    <string name="get_ready_to_start_label">Get ready</string>
    <string name="start_tour_label">Start Tour</string>
    <string name="get_ready_to_start_msg">Prepare your stuff and then click start when you decide to go</string>
    <string name="tour_progress_title">Tour is in progress</string>
    <string name="end_tour_label">End tour</string>
    <string name="tour_progress_guide_msg">Tour is in progress when you\'re done click on end tour</string>
    <string name="visit_long_click_description_txt">Long click to view details</string>
    <string name="code_label">Code</string>
    <string name="category_label">Category</string>
    <string name="gps_label">GPS position</string>
    <string name="address_label">Address</string>
    <string name="note_label">Note</string>
    <string name="recovering_gps_msg">Recovering gps location in progress</string>
    <string name="create_category_label">Create category</string>
    <string name="can_create_reigion_label">Can create region</string>
    <string name="create_label">Create</string>
    <string name="price_label">Price</string>
    <string name="add_label">Add</string>
    <string name="sales_label">Sales</string>
    <string name="expenses_label">Expenses</string>
    <string name="expenses_label_">"Expenses: "</string>
    <string name="expenses_limit_label_">"Expenses limit: "</string>
    <string name="validation_label">Validation</string>
    <string name="cash_box_label">Cash box</string>
    <string name="validated_label_">"Validated: "</string>
    <string name="availability_label">Availability</string>
    <string name="inventory_label">Inventory</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="order_by_label">Order by</string>
    <string name="reverse_label">Reverse</string>
    <string name="filters_label">Filters</string>
    <string name="available_filter_label">Available only</string>
    <string name="categories_label">Categories</string>
    <string name="show_all_label">Show all</string>
    <string name="reset_label">Reset</string>
</resources>