<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/padding_xlarge"
    android:paddingHorizontal="@dimen/padding_medium"
    android:orientation="vertical">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_gravity="end"
        app:icon="@drawable/ic_close"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderByGroupContainer"
        android:visibility="visible"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="@dimen/margin_medium"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                app:strokeColor="?attr/colorSurfaceContainerHighest"
                app:strokeWidth="1dp"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardElevation="0dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/reverse_label"
                        android:paddingEnd="@dimen/padding_small"
                        android:layout_gravity="end"
                        android:id="@+id/reverseSwitch"
                        />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/orderByRadioGroup"
                        >
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_label"
                            android:id="@+id/nameRadioButton"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_label"
                            android:id="@+id/categoryRadioButton"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_label"
                            android:id="@+id/priceRadioButton"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/availability_label"
                            android:id="@+id/availabilityRadioButton"
                            />
                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_medium"
                android:layout_marginStart="1dp"
                android:text="@string/order_by_label"
                style="bold"
                android:textColor="?attr/colorOnSurface"
                />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filterGroupContainer"
        android:visibility="visible"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="@dimen/margin_medium"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                app:strokeColor="?attr/colorSurfaceContainerHighest"
                app:strokeWidth="1dp"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/available_filter_label"
                        android:layout_gravity="end"
                        android:paddingEnd="@dimen/padding_small"
                        android:id="@+id/availableSwitch"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/padding_medium"
                        android:layout_marginStart="1dp"
                        android:text="@string/categories_label"
                        style="bold"
                        android:textColor="?attr/colorOnSurface"
                        />
                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/show_all_label"
                        android:layout_gravity="end"
                        android:checked="true"
                        android:paddingEnd="@dimen/padding_small"
                        android:id="@+id/allCategoriesSwitch"
                        />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/categoriesChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_large"
                        />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_medium"
                android:layout_marginStart="1dp"
                android:text="@string/filters_label"
                style="bold"
                android:textColor="?attr/colorOnSurface"
                />
        </FrameLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/reset_label"
        android:id="@+id/resetButton"
        />

</LinearLayout>

