<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actionsContainer"
            android:visibility="visible"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="@dimen/margin_medium"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    app:strokeColor="?attr/colorSurfaceContainerHighest"
                    app:strokeWidth="1dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_large"
                        >
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/validationChipGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <com.google.android.material.chip.Chip
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Material3.Chip.Filter"
                                android:text="@string/expenses_label"
                                android:id="@+id/expensesChip"
                                android:checkable="false"
                                />


                            <com.google.android.material.chip.Chip
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Material3.Chip.Filter"
                                android:text="@string/cash_box_label"
                                android:id="@+id/cashBoxChip"
                                android:checkable="false"
                                />
                            <com.google.android.material.chip.Chip
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Material3.Chip.Filter"
                                android:text="@string/sales_label"
                                android:id="@+id/salesChip"
                                android:checkable="false"
                                />
                            <com.google.android.material.chip.Chip
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Material3.Chip.Filter"
                                android:text="@string/inventory_label"
                                android:id="@+id/inventoryChip"
                                android:checkable="false"
                                />
                        </com.google.android.material.chip.ChipGroup>
                    </FrameLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_medium"
                    android:layout_marginStart="1dp"
                    android:text="@string/validation_label"
                    style="bold"
                    android:background="?attr/colorSurfaceContainerLow"
                    android:textColor="?attr/colorOnSurface"
                    />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
