<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/padding_large"
    android:id="@+id/validateContainer">
    <FrameLayout
        android:layout_gravity="bottom"
        android:id="@+id/totalAmountsContainer"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_large"
            android:minWidth="@dimen/card_width_medium"
            >
            <LinearLayout
                android:layout_margin="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/validated_label_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                    <TextView
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_gravity="center"
                        android:id="@+id/validatedTextView"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/expenses_label_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                    <TextView
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_gravity="center"
                        android:id="@+id/expensesTextView"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/expensesLimitContainer"
                    >
                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/expenses_limit_label_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                    <TextView
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_gravity="center"
                        android:id="@+id/expensesLimitTextView"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:contentDescription="@string/add_label"
            app:srcCompat="@android:drawable/ic_input_add"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/validateFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:contentDescription="@string/add_label"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_check"/>


    </LinearLayout>
</LinearLayout>
